Implemented render of todos

--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,6 +1,6 @@
 .input {
     height: 50px;
-    width: 80vw;
+    width: 80%;
     border-radius: 12px;
     background-color: white;
     display: flex;
