--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,22 @@
     display: grid;
     place-items: center;
 }
+
+.app__container {
+    height: 75vh;
+    width: 30vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(232,234,237);
+    border-radius: 12px;
+    padding: 32px 0;
+}
+
+.app__todoContainer {
+    flex: 1;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
