--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
 }
 
 
@@ -27,4 +28,8 @@ button {
     border-radius: 10px;
     height: 30px;
     width: 50px;
+}
+
+button:hover {
+    cursor: pointer;
 }
